--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A code sample of an auto-fill web service",
   "main": "index.js",
   "scripts": {
-    "start": "node --harmony --use_strict --optimize_for_size app.js",
+    "start": "npm-run-all --parallel docs test && npm run serve",
+    "serve": "node --harmony --use_strict --optimize_for_size app.js",
     "docs": "jsdoc --configure .jsdocrc --recurse --readme README.md",
+    "test": "echo \"Tests are not implemented\"",
     "watch": "npm-watch"
   },
   "author": "wesleyb@pm.me",
@@ -17,7 +19,9 @@
     "koa-subdomain": "^3.0.0"
   },
   "devDependencies": {
+    "ink-docstrap": "^1.3.2",
     "jsdoc": "^3.6.3",
+    "npm-run-all": "^4.1.5",
     "npm-watch": "^0.6.0"
   },
   "watch": {
@@ -29,7 +33,7 @@
         "./data",
         "node_modules"
       ],
-      "extensions": "js,jsdoc"
+      "extensions": "md,js,jsdoc"
     }
   }
 }
