--- a/client-2/.gitignore
+++ b/client-2/.gitignore
@@ -1,23 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#
+# This file tells Git which directories and files to ignore.
+#
+# SEE: [Git: `.gitignore`](https://git-scm.com/docs/gitignore)
+#
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+#
+# Compiled Assets
+# These directories contain the compilations of source files
+#
 
-# testing
-/coverage
-
-# production
+# Final location for compiled files
+/docs
 /build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
