--- a/client-2/package.json
+++ b/client-2/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "docs": "jsdoc --configure .jsdocrc",
+    "test": "echo \"Tests are not implemented, yet\"",
+    "eject": "react-scripts eject",
+    "watch": "npm-watch"
   },
   "dependencies": {
     "datalist-polyfill": "^1.23.3",
@@ -14,7 +16,21 @@
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "ink-docstrap": "^1.3.2",
+    "jsdoc": "^3.6.3",
+    "npm-watch": "^0.6.0",
     "react-scripts": "^3.1.1"
+  },
+  "watch": {
+    "docs": {
+      "patterns": "./",
+      "ignore": [
+        "./build",
+        "./docs",
+        "node_modules"
+      ],
+      "extensions": "md,js,jsdoc"
+    }
   },
   "browserslist": {
     "production": [
