--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm-run-all --parallel docs test && npm run serve",
     "serve": "node --harmony --use_strict --optimize_for_size main.js",
     "docs": "jsdoc --configure .jsdocrc",
-    "test": "echo \"Tests are not implemented\"",
+    "test": "echo \"Tests are not implemented, yet\"",
     "watch": "npm-watch"
   },
   "author": "wesleyb@pm.me",
