--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
   "name": "wesleyb-sample-schoology-web-service",
   "version": "1.0.0",
-  "description": "A code sample of an auto-fill web service",
+  "description": "An auto-fill web service",
+  "private": true,
   "main": "main.js",
   "scripts": {
-    "start": "npm-run-all --parallel docs test && npm run serve",
+    "api:setup": "cd api && npm ci",
+    "api:docs": "cd api && npm run docs && shx rm -rf docs/api && shx cp -r client/docs docs/api",
+    "api:test": "cd api && npm run test",
+    "client:setup": "cd client && npm ci",
+    "client:build": "cd client && npm run build && shx rm -rf public && shx cp -r client/build public",
+    "client:docs": "cd client && npm run docs && shx rm -rf docs/client && shx cp -r client/docs docs/client",
+    "client:test": "cd client && npm run test",
+    "start": "npm-run-all --parallel client:* api:* && npm run serve",
     "serve": "node --harmony --use_strict --optimize_for_size main.js",
-    "docs": "jsdoc --configure .jsdocrc",
-    "test": "echo \"Tests are not implemented, yet\"",
-    "watch": "npm-watch"
+    "docs": "npm-run-all --parallel docs:*",
+    "docs:client": "npm-run-all --sequential client:setup client:docs",
+    "docs:api": "npm-run-all --sequential api:setup api:docs",
+    "test": "npm-run-all --parallel test:*",
+    "test:client": "npm-run-all --sequential client:setup client:test",
+    "test:api": "npm-run-all --sequential api:setup api:test"
   },
   "author": "wesleyb@pm.me",
   "license": "UNLICENSED",
   "dependencies": {
     "koa": "^2.8.1",
-    "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-subdomain": "^3.0.0"
   },
   "devDependencies": {
-    "ink-docstrap": "^1.3.2",
-    "jsdoc": "^3.6.3",
     "npm-run-all": "^4.1.5",
-    "npm-watch": "^0.6.0"
-  },
-  "watch": {
-    "docs": {
-      "patterns": "./",
-      "ignore": [
-        "./public",
-        "./docs",
-        "./data",
-        "node_modules"
-      ],
-      "extensions": "md,js,jsdoc"
-    }
+    "shx": "^0.3.2"
   }
 }
