--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "api": "npm-run-all --sequential api:*",
-    "api:setup": "cd api && npm ci",
+    "api": "npm-run-all --sequential api:**",
+    "api-cache": "npm-run-all --sequential api:*",
+    "api:opt:setup": "cd api && npm ci",
     "api:docs": "shx rm -rf docs/api && cd api && npm run docs && shx cp -r docs ../docs/api",
     "api:test": "cd api && npm run test",
-    "client": "npm-run-all --sequential client:*",
-    "client:setup": "cd client && npm ci",
+    "client": "npm-run-all --sequential client:**",
+    "client-cache": "npm-run-all --sequential client:*",
+    "client:opt:setup": "cd client && npm ci",
     "client:build": "shx rm -rf public && cd client && npm run build && shx cp -r build ../public",
     "client:docs": "shx rm -rf docs/client && cd client && npm run docs && shx cp -r docs ../docs/client",
-    "client:test": "cd client && npm run test -- --no-watchman",
-    "start": "npm-run-all --sequential build serve",
-    "build": "npm-run-all --parallel client api",
+    "client:test": "cd client && npm run test -- --watchAll=false",
+    "start": "npm-run-all --sequential build:cache serve",
+    "build:cache": "npm-run-all --parallel client-cache api-cache",
+    "build:fresh": "npm-run-all --parallel client api",
     "serve": "node --harmony --use_strict --optimize_for_size main.js",
     "docs": "npm-run-all --parallel docs:*",
     "docs:client": "npm-run-all --sequential client:docs",
