--- a/client/.jsdocrc
+++ b/client/.jsdocrc
@@ -7,8 +7,7 @@
     "tutorials": "./tutorials"
   },
   "source": {
-    "include": "./",
-    "exclude": ["./build", "node_modules"],
+    "include": "./src",
     "includePattern": ".+\\.js(doc)?$"
   },
   "plugins": ["plugins/markdown"],
