--- a/client/package.json
+++ b/client/package.json
@@ -6,19 +6,24 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "docs": "jsdoc --configure .jsdocrc",
+    "docs": "npm-run-all --parallel docs:*",
+    "docs:js": "jsdoc --configure .jsdocrc",
+    "docs:css": "kss --config kss.config.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch": "npm-watch"
   },
   "dependencies": {
     "datalist-polyfill": "^1.23.3",
+    "details-element-polyfill": "^2.4.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
     "ink-docstrap": "^1.3.2",
     "jsdoc": "^3.6.3",
+    "kss": "^3.0.0-beta.25",
+    "npm-run-all": "^4.1.5",
     "npm-watch": "^0.6.0",
     "react-scripts": "^3.1.1"
   },
@@ -38,14 +43,23 @@
     ]
   },
   "watch": {
-    "docs": {
-      "patterns": "./",
+    "docs:js": {
+      "patterns": "./src",
       "ignore": [
         "./build",
         "./docs",
         "node_modules"
       ],
       "extensions": "md,js,jsdoc"
+    },
+    "docs:css": {
+      "patterns": "./src/styles",
+      "ignore": [
+        "./build",
+        "./docs",
+        "node_modules"
+      ],
+      "extensions": "css,md"
     }
   }
 }
