--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "react-scripts build",
     "docs": "npm-run-all --parallel docs:*",
     "docs:js": "jsdoc --configure .jsdocrc",
-    "docs:css": "kss --config kss.config.json",
+    "docs:css": "kss --config kss.config.json && npm run docs:css:copy-files",
+    "docs:css:copy-files": "shx rm -rf ./docs/css/user-assets && shx mkdir ./docs/css/user-assets && shx cp ./src/styles/docs/*.css ./docs/css/user-assets",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch": "npm-watch"
@@ -25,7 +26,8 @@
     "kss": "^3.0.0-beta.25",
     "npm-run-all": "^4.1.5",
     "npm-watch": "^0.6.0",
-    "react-scripts": "^3.1.1"
+    "react-scripts": "^3.1.1",
+    "shx": "^0.3.2"
   },
   "// browserslist // ???": "What is the browser support for the project? Undefined.",
   "// browserslist // NOTE": "This is `create-react-app`'s default configuration; I may not agree with it.",
