2: Split server and build files

--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "wesleyb-sample-schoology-web-service",
+  "name": "wesleyb-sample-schoology",
   "version": "1.0.0",
-  "description": "An auto-fill web service",
+  "description": "A server for an auto-fill web service",
   "private": true,
   "main": "main.js",
   "scripts": {
     "api": "npm-run-all --sequential api:**",
-    "api-cache": "npm-run-all --sequential api:*",
+    "api-cached": "npm-run-all --sequential api:*",
     "api:opt:setup": "cd api && npm ci",
     "api:docs": "shx rm -rf docs/api && cd api && npm run docs && shx cp -r docs ../docs/api",
     "api:test": "cd api && npm run test",
     "client": "npm-run-all --sequential client:**",
-    "client-cache": "npm-run-all --sequential client:*",
+    "client-cached": "npm-run-all --sequential client:*",
     "client:opt:setup": "cd client && npm ci",
     "client:build": "shx rm -rf public && cd client && npm run build && shx cp -r build ../public",
     "client:docs": "shx rm -rf docs/client && cd client && npm run docs && shx cp -r docs ../docs/client",
     "client:test": "cd client && npm run test -- --watchAll=false",
-    "start": "npm-run-all --sequential build:cache serve",
-    "build:cache": "npm-run-all --parallel client-cache api-cache",
-    "build:fresh": "npm-run-all --parallel client api",
-    "serve": "node --harmony --use_strict --optimize_for_size main.js",
+    "server": "cd server && npm ci",
+    "server:start": "cd server && npm run start",
+    "start": "npm-run-all --sequential build serve",
+    "start:cached": "npm-run-all --sequential build:cached serve",
+    "build": "npm-run-all --parallel api client server",
+    "build:cached": "npm-run-all --parallel api-cached client-cached",
+    "serve": "npm run server:start",
     "docs": "npm-run-all --parallel client:docs api:docs",
     "test": "npm run --parallel client:test api:test"
   },
   "author": "wesleyb@pm.me",
   "license": "UNLICENSED",
-  "dependencies": {
-    "koa": "^2.8.1",
-    "koa-static": "^5.0.0",
-    "koa-subdomain": "^3.0.0"
-  },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "shx": "^0.3.2"
