Quick: Move public and docs to dist (+ cleanup)

--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,13 @@
 # These directories contain the compilations of source files
 #
 
+# Final location for compiled files (root)
+/dist
 # Final location for compiled files (recursive)
 docs
 !docs/index.html
 !docs/README.md
 build
-# Final location for compiled files (root)
-/public
 
 #
 # Node (NPM)
