--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "api": "npm-run-all --sequential api:**",
     "api-cached": "npm-run-all --sequential api:*",
     "api:opt:setup": "cd api && npm ci",
-    "api:docs": "shx rm -rf docs/api && cd api && npm run docs && shx cp -r docs ../docs/api",
+    "api:docs": "shx rm -rf dist/docs/api && cd api && npm run docs && shx cp -r docs ../dist/docs/api",
     "api:test": "cd api && npm run test",
     "client": "npm-run-all --sequential client:**",
     "client-cached": "npm-run-all --sequential client:*",
     "client:opt:setup": "cd client && npm ci",
-    "client:build": "shx rm -rf public && cd client && npm run build && shx cp -r build ../public",
-    "client:docs": "shx rm -rf docs/client && cd client && npm run docs && shx cp -r docs ../docs/client",
+    "client:build": "shx rm -rf dist/public && cd client && npm run build && shx cp -r build ../dist/public",
+    "client:docs": "shx rm -rf dist/docs/client && cd client && npm run docs && shx cp -r docs ../dist/docs/client",
     "client:test": "cd client && npm run test -- --watchAll=false",
     "server": "cd server && npm ci",
     "server:start": "cd server && npm run start",
