--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "private": true,
   "main": "main.js",
   "scripts": {
+    "start": "npm-run-all --sequential build serve",
+    "start:cached": "npm-run-all --sequential build:cached serve",
+    "build": "npm-run-all --parallel api client server",
+    "build:cached": "npm-run-all --parallel api-cached client-cached",
+    "serve": "npm run server:start",
+    "docs": "npm-run-all --parallel client:docs api:docs",
+    "test": "npm run --parallel client:test api:test",
     "api": "npm-run-all --sequential api:**",
     "api-cached": "npm-run-all --sequential api:*",
     "api:opt:setup": "cd api && npm ci",
@@ -17,14 +24,7 @@
     "client:docs": "shx rm -rf dist/docs/client && cd client && npm run docs && shx cp -r docs ../dist/docs/client",
     "client:test": "cd client && npm run test -- --watchAll=false",
     "server": "cd server && npm ci",
-    "server:start": "cd server && npm run start",
-    "start": "npm-run-all --sequential build serve",
-    "start:cached": "npm-run-all --sequential build:cached serve",
-    "build": "npm-run-all --parallel api client server",
-    "build:cached": "npm-run-all --parallel api-cached client-cached",
-    "serve": "npm run server:start",
-    "docs": "npm-run-all --parallel client:docs api:docs",
-    "test": "npm run --parallel client:test api:test"
+    "server:start": "cd server && npm run start"
   },
   "author": "wesleyb@pm.me",
   "license": "UNLICENSED",
