--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "docs:js": "jsdoc --configure .jsdocrc",
     "docs:css": "kss --config kss.config.json",
     "// docs:css:custom-assets": "No documentation (and trial and error failed) to add custom styles, so I manually copy them in",
-    "docs:css:custom-assets": "shx rm -rf ./docs/css/user-assets && shx mkdir ./docs/css/user-assets && shx cp ./src/styles/docs/*.css ./docs/css/user-assets",
+    "//// docs:css:custom-assets": "shx rm -rf ./docs/css/user-assets && shx mkdir -p ./docs/css/user-assets && shx cp ./src/styles/docs/*.css ./docs/css/user-assets/",
     "// docs:css:app-styles": "!!!: 1) Final stylesheet has dynamic name; 2) Final stylesheet has no comments; 3) We don't customize build, yet",
     "docs:css:app-styles": "echo \"App styles are not available for the documentation, yet\"",
     "test": "react-scripts test",
