2: many fixes to Docker (still need CORS fix)

--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "build:cached": "npm-run-all --parallel api-cached client-cached",
     "serve": "npm run server:start",
     "docs": "npm-run-all --parallel client:docs api:docs",
+    "docs:setup": "mkdir -p dist/docs",
     "test": "npm-run-all --parallel client:test api:test",
     "api": "npm-run-all --sequential api:**",
     "api-cached": "npm-run-all --sequential api:*",
     "api:opt:setup": "cd api && npm ci",
-    "api:docs": "shx rm -rf dist/docs/api && cd api && npm run docs && shx cp -r docs ../dist/docs/api",
+    "api:docs": "npm run docs:setup && shx rm -rf dist/docs/api && cd api && npm run docs && shx cp -r docs ../dist/docs/api",
     "api:test": "cd api && npm run test",
     "client": "npm-run-all --sequential client:**",
     "client-cached": "npm-run-all --sequential client:*",
     "client:opt:setup": "cd client && npm ci",
     "client:build": "shx rm -rf dist/public && cd client && npm run build && shx cp -r build ../dist/public",
-    "client:docs": "shx rm -rf dist/docs/client && cd client && npm run docs && shx cp -r docs ../dist/docs/client",
+    "client:docs": "npm run docs:setup && shx rm -rf dist/docs/client && cd client && npm run docs && shx cp -r docs ../dist/docs/client",
     "client:test": "cd client && npm run test -- --watchAll=false",
     "server": "cd server && npm ci",
     "server:start": "cd server && npm run start"
