--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,12 @@
 .editorconfig
 .gitignore
+.gitignore
+Dockerfile
 node_modules
-/dist/docs
 /*.md
+# RFE: Remove source files from `/dist/docs` and `/client/docs`, so all this can be reduced to just `docs`
+/api/docs
+/dist/docs/api
+/dist/docs/client
+/client/docs/js
+/client/docs/css
