--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "shx": "^0.3.2"
+  },
+  "dependencies": {
+    "koa-router": "^7.4.0"
   }
 }
