--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "wesleyb@pm.me",
   "license": "UNLICENSED",
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "koa": "^2.8.1",
     "koa-static": "^5.0.0",
     "koa-subdomain": "^3.0.0"
