--- a/api/.jsdocrc
+++ b/api/.jsdocrc
@@ -7,7 +7,7 @@
     "tutorials": "./tutorials"
   },
   "source": {
-    "include": "./",
+    "include": ["./", "../data/"],
     "exclude": ["./docs", "node_modules"],
     "includePattern": ".+\\.js(doc)?$"
   },
