--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "author": "wesleyb@pm.me",
   "license": "UNLICENSED",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
