--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "dotenv": "^8.1.0",
     "koa": "^2.8.1",
     "koa-static": "^5.0.0",
     "koa-subdomain": "^3.0.0"
